fix spacing

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -269,16 +269,11 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 100px;
+        padding-top: 70px;
     }
 
     .download-section {
         padding: 100px 0;
-    }
-
-    #map {
-        height: 400px;
-        margin-top: 250px;
     }
 }
 
